--- a/hapi-assignment/package.json
+++ b/hapi-assignment/package.json
@@ -12,13 +12,17 @@
     "bcrypt": "^0.8.5",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.1.5",
+    "boom": "^3.1.2",
     "dotenv": "^2.0.0",
     "globby": "^4.0.0",
     "hapi": "^12.1.0",
     "hapi-next": "^0.5.0",
     "joi": "^7.2.2",
+    "jsonwebtoken": "^5.5.4",
+    "lodash": "^4.0.1",
     "moment": "^2.11.1",
     "mongoose": "^4.3.7",
+    "redis": "^2.4.2",
     "require-directory": "^2.1.1"
   }
 }
